# rust-cookbook

./: Cargo.toml
algorithms/src/: main.rs
concurrency/spawn-short-lived-threads/: Cargo.toml
concurrency/spawn-short-lived-threads/src/: main.rs
src/: main.rs
