workspace = { members = ["algorithms", "concurrency/create-a-parallel-pipeline", "concurrency/spawn-short-lived-threads"] }
[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.11"
rand = "0.8.5"
rand_distr = "0.4.3"
